Fixed Pokémon's IMGs size & position. Developed Grid & Pokémon List's Scrollbar

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -20,7 +20,6 @@ header {
     position: fixed;
     width: 100%;
     z-index: 1;
-
 }
 
 main {
@@ -103,4 +102,19 @@ nav a {
 #main-page.regions {
     display: flex;
     justify-content: center;
+}
+
+::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 30px;
+    background-color: #ffffff;
+    transition: 0.3 ease-in-out;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #ffffffc2;
 }
